# signalstream

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt  config.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml  tests.yml
db/: init.sql  sessions.sql  tags.sql
docker/: Dockerfile  entrypoint.sh
docs/: openapi.yaml  rbac.md
docs/openapi/: openapi.yaml
docs/openapi/components/: schemas.yaml
docs/openapi/paths/: admin.yaml  auth.yaml  feed.yaml  items.yaml  notifications.yaml  tags.yaml  user_tags.yaml
docs/openapi/swagger-ui/: index.html
docs/swagger-ui/: index.html
server/: CMakeLists.txt  config.json  main.cpp
server/controllers/: AdminController.cpp  AdminController.h  AuthController.cpp  AuthController.h  DocsController.cpp  DocsController.h  FeedController.cpp  FeedController.h  HealthController.cpp  HealthController.h  ItemTagsController.cpp  ItemTagsController.h  ItemsController.cpp  ItemsController.h  NotificationController.cpp  NotificationController.h  TagsController.cpp  TagsController.h  UserTagController.cpp  UserTagController.h
server/core/: AppError.h  Constants.h  EmailUtils.cpp  EmailUtils.h  Error.h  ErrorLogger.cpp  ErrorLogger.h  Middleware.h  PasswordHasher.h  Profiler.h  RequestContextHelpers.h  Response.h  RoleUtils.h  SqlUtils.h  TimeConstants.h  Timing.h  TokenGenerator.h  Uptime.h  Version.h
server/docs/: openapi.yaml  rbac.md
server/dto/: AuthDTO.h  FeedItemDTO.h  HealthDTO.h  ItemDTO.h  ItemDTOJson.h  ItemTagDTO.h  NotificationDTO.h  TagDTO.h
server/mappers/: BaseMapper.h  FeedMapper.h  ItemMapper.h  MapperRegistry.h  NotificationMapper.h  RoleMapper.h  UserMapper.h
server/middleware/: RequestLoggingMiddleware.cpp  RequestLoggingMiddleware.h  TokenMiddleware.cpp  TokenMiddleware.h  UserContextMiddleware.cpp  UserContextMiddleware.h
server/pagination/: Pagination.h  PaginationParser.h
server/repositories/: FeedRepository.cpp  FeedRepository.h  ItemTagsRepository.cpp  ItemTagsRepository.h  ItemsRepository.cpp  ItemsRepository.h  NotificationRepository.cpp  NotificationRepository.h  ResetTokenRepository.cpp  ResetTokenRepository.h  SessionRepository.cpp  SessionRepository.h  TagsRepository.cpp  TagsRepository.h  UserRepository.cpp  UserRepository.h  UserTagsRepository.cpp  UserTagsRepository.h
server/services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  EmailService.cpp  EmailService.h  FeedService.cpp  FeedService.h  ItemTagService.cpp  ItemTagService.h  ItemsService.cpp  ItemsService.h  NotificationService.cpp  NotificationService.h  RoleService.cpp  RoleService.h  SMTPEmailService.cpp  SMTPEmailService.h  TagsService.cpp  TagsService.h  UserTagService.cpp  UserTagService.h
server/utils/: PasswordHasher.h  PasswordValidator.h  SmtpClient.cpp  SmtpClient.h  TokenGenerator.h
tests/: CMakeLists.txt  main.cpp
tests/unit/: dummy_test.cpp  test_error.cpp  test_password_hasher.cpp  test_response_helpers.cpp  test_token_generator.cpp
